[package]
name = "age-recipient-pq"
version = "0.1.0"
edition = "2021"
description = "Native Rust implementation of age's post-quantum recipient, compatible with age CLI PQ encryption"
license = "Apache-2.0 OR MIT"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
age = "0.11"
age-core = "0.11"
pq-xwing-hpke = { path = "../pq-xwing-hpke" }
chacha20poly1305 = "0.10"
base64 = "0.22"
zeroize = "1.8"
bech32 = "0.9"
rand = {version = "0.9", features = ["std", "os_rng"]}

[dev-dependencies]
tempfile = "3.24.0"
