[package]
name = "age-recipient-pq"
version = "0.1.0"
edition = "2021"
description = "A Rust library providing post-quantum hybrid recipients and identities compatible with the age encryption format"
license = "Apache-2.0 OR MIT"


[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
age = "0.11"
age-core = "0.11"
pq-xwing-hpke = { git = "https://github.com/Slurp9187/pq-xwing-hpke" }
base64 = "0.22"
bech32 = "0.11"
secrecy = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }

[[example]]
name = "pq-keygen"
path = "examples/pq-keygen.rs"
